--- a/src/JsonPatch.Dynamic.NetStandard/JsonPatch.Dynamic.NetStandard/JsonPatch.Dynamic.NetStandard.csproj
+++ b/src/JsonPatch.Dynamic.NetStandard/JsonPatch.Dynamic.NetStandard/JsonPatch.Dynamic.NetStandard.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Marvin.JsonPatch.NetStandard" Version="1.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
 </Project>
